store bookmarks separated by lavender-generated world id