@@ -4,6 +4,7 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 import io.wispforest.lavender.Lavender;
+import io.wispforest.lavender.client.LavenderClient;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.util.Identifier;
 import org.jetbrains.annotations.Nullable;
@@ -15,8 +16,8 @@ import java.util.*;
 
 public class LavenderBookmarks {
 
-    private static final TypeToken<Map<Identifier, List<Bookmark>>> BOOKMARKS_TYPE = new TypeToken<>() {};
-    private static Map<Identifier, List<Bookmark>> bookmarks;
+    private static final TypeToken<Map<UUID, Map<Identifier, List<Bookmark>>>> BOOKMARKS_TYPE = new TypeToken<>() {};
+    private static Map<UUID, Map<Identifier, List<Bookmark>>> bookmarks;
 
     private static final Gson GSON = new GsonBuilder().registerTypeAdapter(Identifier.class, new Identifier.Serializer()).setPrettyPrinting().create();
 
@@ -30,24 +31,30 @@ public class LavenderBookmarks {
     }
 
     public static List<Bookmark> getBookmarks(Book book) {
-        return bookmarks.containsKey(book.id())
-                ? Collections.unmodifiableList(bookmarks.get(book.id()))
-                : List.of();
+        var worldBookmarks = bookmarks.get(LavenderClient.currentWorldId());
+        if (worldBookmarks == null) return List.of();
+
+        if (!worldBookmarks.containsKey(book.id())) return List.of();
+        return worldBookmarks.get(book.id());
     }
 
     public static void addBookmark(Book book, Entry entry) {
-        bookmarks.computeIfAbsent(book.id(), $ -> new ArrayList<>()).add(new Bookmark(Bookmark.Type.ENTRY, entry.id()));
+        getBookmarkList(book).add(new Bookmark(Bookmark.Type.ENTRY, entry.id()));
         save();
     }
 
     public static void addBookmark(Book book, Category entry) {
-        bookmarks.computeIfAbsent(book.id(), $ -> new ArrayList<>()).add(new Bookmark(Bookmark.Type.CATEGORY, entry.id()));
+        getBookmarkList(book).add(new Bookmark(Bookmark.Type.CATEGORY, entry.id()));
         save();
     }
 
     public static void removeBookmark(Book book, Bookmark bookmark) {
-        bookmarks.computeIfAbsent(book.id(), $ -> new ArrayList<>()).remove(bookmark);
+        getBookmarkList(book).remove(bookmark);
         save();
+    }
+
+    private static List<Bookmark> getBookmarkList(Book book) {
+        return bookmarks.computeIfAbsent(LavenderClient.currentWorldId(), $ -> new HashMap<>()).computeIfAbsent(book.id(), $ -> new ArrayList<>());
     }
 
     private static void save() {
